add docker-compose.yml